# applist

./: 0Temp.c  Readme.md  applist.pro  appwindow.c  appwindow.h  config.h  install.sh  main.c  meson.build  preferences.c  preferences.h
data/: applist.desktop
